--- a/mklivecd/mklivecd.spec.in
+++ b/mklivecd/mklivecd.spec.in
@@ -1,4 +1,4 @@
-# $Id: mklivecd.spec.in,v 1.8 2003/10/02 07:49:45 jaco Exp $
+# $Id: mklivecd.spec.in,v 1.9 2003/10/02 07:57:55 jaco Exp $
 
 %define name		mklivecd
 %define version		@MKLIVECDVER@
@@ -47,7 +47,7 @@ rm -rf %buildroot
 %{_datadir}/mklivecd/init.d/hwdetect
 
 %changelog
-* Mon Sep 29 2003 Jaco Greeff <jaco@linuxminicd.org> @MKLIVECDVER@-@MKLIVECDREL@mdk
+* @SPECDATE@ Jaco Greeff <jaco@linuxminicd.org> @MKLIVECDVER@-@MKLIVECDREL@mdk
 - version @MKLIVECDVER@
 
 * Sat Sep 27 2003 Tibor Pittich <Tibor.Pittich@phuture.sk> 0.5.5-2mdk
