--- a/mklivecd/src/mklivecd.in
+++ b/mklivecd/src/mklivecd.in
@@ -19,7 +19,7 @@
 #
 # Adapted from the MiniCD (http://www.linuxminicd.org) and mkinitrd build scripts
 #
-# $Id: mklivecd.in,v 1.20 2003/10/03 09:51:01 jaco Exp $
+# $Id: mklivecd.in,v 1.21 2003/10/03 10:46:52 jaco Exp $
 #
 
 PATH=/sbin:/usr/sbin:$PATH
@@ -516,7 +516,7 @@ while [ $# -gt 0 ]; do
 			exit 0
 			;;
 
-		-h|-?|--help)
+		-h|--help)
 			usage
 			;;
 
