--- a/mklivecd/src/mklivecd.in
+++ b/mklivecd/src/mklivecd.in
@@ -19,7 +19,7 @@
 #
 # Adapted from the MiniCD (http://www.linuxminicd.org) and mkinitrd build scripts
 #
-# $Id: mklivecd.in,v 1.21 2003/10/03 10:46:52 jaco Exp $
+# $Id: mklivecd.in,v 1.22 2003/10/03 13:45:01 jaco Exp $
 #
 
 PATH=/sbin:/usr/sbin:$PATH
@@ -92,7 +92,7 @@ usage () {
 	echo "Boot options:" >&2
 	echo "    --iso-bootmsg=<msg>        Use 'msg' as the isolinux message display" >&2
 	echo "    --iso-bootkey=<key>,<msg>  Display 'msg' on key 'key' from isolinux" >&2
-	echo "    --iso-graphic              Use the Madrake boot image extension" >&2
+	echo "    --iso-graphic              Use the Mandrake boot image extension" >&2
 	echo "    --iso-bgimage=<image.lss>  Use 'image.lss' as the isolinux display image" >&2
 	echo "    --keyboard=<mapping>       Specify a different keyboard layout (default: @DEF_KEYBOARD@)" >&2
 	echo "" >&2
