--- a/mklivecd/src/hwdetect.in
+++ b/mklivecd/src/hwdetect.in
@@ -19,7 +19,7 @@
 #
 # Adapted for mklivecd from the MiniCD (http://www.linuxminicd.org> hwdetect script
 #
-# $Id: hwdetect.in,v 1.16 2003/10/04 10:53:28 jaco Exp $
+# $Id: hwdetect.in,v 1.17 2003/10/04 11:00:43 jaco Exp $
 #
 
 use lib qw(/usr/lib/libDrakX);
@@ -301,8 +301,8 @@ sub hwdetect_probeusb() {
 	# interface module (TODO: cater for 2.6 as well)
 	my @modules = ('usb-uhci', 'usb-ohci');
 	foreach my $module (@modules) {
-		unless (modprobe("-q", $module) || ($probe)) {
-			modules::add_probeall("usb-interface", $module);
+		unless (modprobe("-q", $module)) {
+			modules::add_probeall("usb-interface", $module) unless ($probe);
 		}
 	}
 
@@ -439,7 +439,7 @@ sub hwdetect_getsound {
 	my $num = 0;
 	foreach my $card (@probed_cards) {
 		my ($probed_vendor, $probed_desc) = split(/\|/, $card->{description});
-		modules::add_alias("sound-slot-$num", $card->{driver});
+		modules::add_alias("sound-slot-$num", $card->{driver}) unless ($probe);
 		hwdetect_loadmod($card->{driver}, $probed_vendor, $probed_desc);
 		print_hash($card) if ($debug);
 	}
@@ -454,7 +454,7 @@ sub hwdetect_getnetwork {
 	my $num = 0;
 	foreach my $card (@probed_cards) {
 		my ($probed_vendor, $probed_desc) = split(/\|/, $card->{description});
-		modules::add_alias("eth$num", $card->{driver});
+		modules::add_alias("eth$num", $card->{driver}) unless ($probe);
 		hwdetect_loadmod($card->{driver}, $probed_vendor, $probed_desc);
 		print_hash($card) if ($debug);
 	}
